# ComputerGeometryTasks

./: .gitignore
Task10/: CMakeLists.txt
Task10/PlaneGeometry/include/plane_geometry/: Geometry.h
Task10/PlaneGeometry/src/: Geometry.cpp
Task10/Viewer2d/: CMakeLists.txt  CanvasWidget.cpp  CanvasWidget.h  MainWindow.cpp  MainWindow.ui  main.cpp
Task11/: CMakeLists.txt
Task11/PlaneGeometry/: CMakeLists.txt
Task11/PlaneGeometry/include/PlaneGeometry/: Geometry.h
Task11/PlaneGeometry/src/: Geometry.cpp
Task11/Viewer2D/src/: DrawingWidget.h  MainWindow.cpp  MainWindow.h
Task12/: CMakeLists.txt
Task12/PlaneGeometry/include/PlaneGeometry/: Geometry.h  Point.h
Task12/PlaneGeometry/src/: Geometry.cpp
Task12/Viewer2D/: CMakeLists.txt
Task12/Viewer2D/src/: DrawingWidget.cpp  DrawingWidget.h  MainWindow.cpp  MainWindow.h
Task5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Task5/algorithms/: convex_hull.cpp  convex_hull.hpp
Task6/: CMakeLists.txt
Task6/Core/: CMakeLists.txt
Task6/Core/include/core/: Geometry.h
Task6/Core/src/: delaunay.cpp
Task6/Viewer/: CMakeLists.txt
Task6/Viewer/src/: Canvas.cpp  Canvas.h  main.cpp
Task7_9/: CMakeLists.txt
Task7_9/PlaneGeometry/: CMakeLists.txt
Task7_9/PlaneGeometry/include/PlaneGeometry/: Geometry.h
Task7_9/PlaneGeometry/src/: Geometry.cpp
Task7_9/Viewer2D/: CMakeLists.txt
Task7_9/Viewer2D/src/: DrawingWidget.cpp  DrawingWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
